light theme for docs, wip

--- a/qdrant-landing/themes/qdrant-2024/assets/css/documentation.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/documentation.scss
@@ -1,4 +1,5 @@
 @import 'base';
+@import 'partials/theme-switch';
 @import 'partials/docs-menu';
 @import 'partials/documentation';
 @import 'partials/documentation-article';
