--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docs-menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docs-menu.html
@@ -8,7 +8,7 @@
     <div id="sidebar" class="docs-menu__content">
       <div class="docs-menu__input">
         <button
-          class="qdr-search-input-btn q-input input_md input_light-bg"
+          class="qdr-search-input-btn q-input input_md input_light-bg docs-menu__search-btn"
           type="button"
           name="search"
           data-target="#searchModal"
