--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/documentation.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/documentation.html
@@ -1,4 +1,4 @@
-<section class="documentation">
+<section class="documentation documentation_theme-light">
   <div class="documentation__container">
     <div class="row gx-4">
       {{ partial "docs-menu" . }}
