--- a/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
@@ -79,10 +79,12 @@ $theme-colors: (
   'warning': $warning-50,
   'danger': $error-50,
   'light': $neutral-98,
-  'dark': $neutral-10,
+  'dark': $neutral-20,
 );
 
 $body-bg: $neutral-98;
+$body-color: $neutral-30;
+$headings-color: $neutral-20;
 $link-color: $primary-50;
 $link-hover-color: $primary-50;
 $link-decoration: none;
