--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_top-banner.scss
@@ -6,8 +6,8 @@
   justify-content: center;
   align-items: center;
   gap: $spacer * 1.5;
-  border-bottom: 1px solid var(--Neutral-N20, #161e33);
-  background: var(--Neutral-N10, #090e1a);
+  border-bottom: 1px solid $neutral-20;
+  background: $neutral-10;
 
   &__text {
     color: $neutral-94;
