--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
@@ -1,3 +1,4 @@
+{{ $section := .Section }}
 {{ with (.Site.GetPage "/headless/menu") }}
   <div class="main-menu z-2">
     <a href="/">
@@ -39,6 +40,9 @@
       {{ end }}
     </ul>
     <div class="main-menu__buttons">
+      {{ if eq $section "documentation" }}
+        {{ partial "theme-switch" . }}
+      {{ end }}
       <a href="{{ .Params.logIn.url }}" class="menu-link mx-3">{{ .Params.logIn.text }}</a>
       <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm">{{ .Params.startFree.text }}</a>
     </div>
