add Brand resources page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -84,3 +84,5 @@
 @import 'partials/community-features';
 @import 'partials/community-testimonials';
 @import 'partials/community-get-contacted';
+@import 'partials/brand-resources-hero';
+@import 'partials/brand-resources-content';
