--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -86,3 +86,4 @@
 @import 'partials/community-get-contacted';
 @import 'partials/brand-resources-hero';
 @import 'partials/brand-resources-content';
+@import 'partials/subscribe';
