several switchers, fixes

--- a/qdrant-landing/themes/qdrant-2024/assets/css/documentation.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/documentation.scss
@@ -3,6 +3,6 @@
 @import 'partials/docs-menu';
 @import 'partials/documentation';
 @import 'partials/documentation-article';
-@import 'partials/table-contents';
+@import 'partials/table-of-contents';
 @import 'partials/feedback';
 @import 'search/dark-theme';
