--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_table-of-contents.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_table-of-contents.scss
@@ -1,6 +1,6 @@
 @use '../helpers/functions' as *;
 
-.table-contents {
+.table-of-contents {
   background-color: $neutral-10;
   margin-bottom: -1px;
 
