--- a/qdrant-landing/themes/qdrant-2024/assets/css/search/_dark-theme.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/search/_dark-theme.scss
@@ -1,6 +1,9 @@
-.qdr-search__dialog {
+[data-theme="dark"] .qdr-search__dialog {
   background-color: $neutral-20;
   color: $neutral-90;
+  h5 {
+    color: $neutral-90;
+  }
   input {
     background-color: $neutral-20;
     color: $neutral-98;
