--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
@@ -4,7 +4,15 @@
     <a href="/">
       {{ partial "logo.html" . }}
     </a>
+
+    <div class="d-flex justify-content-end align-items-center gap-4">
+    {{ if eq $section "documentation" }}
+    <div class="d-block d-xl-none">
+      {{ partial "theme-switch" . }}
+    </div>
+    {{ end }}
     <button type="button" class="main-menu__trigger">{{ partial "svg" "hamburger-menu-white.svg" }}</button>
+    </div>
     <ul class="main-menu__links">
       {{ range .Params.menuItems }}
         <li class="main-menu__item">
