--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation.scss
@@ -21,7 +21,7 @@
   }
 }
 
-[data-theme="light"] {
+[data-theme='light'] {
   .documentation {
     background-color: $neutral-98;
     color: $neutral-30;
