--- a/qdrant-landing/themes/qdrant-2024/assets/css/search/_dark-theme.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/search/_dark-theme.scss
@@ -1,4 +1,4 @@
-[data-theme="dark"] .qdr-search__dialog {
+[data-theme='dark'] .qdr-search__dialog {
   background-color: $neutral-20;
   color: $neutral-90;
   h5 {
