--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -42,7 +42,10 @@
           </div>
         </div>
       </div>
-      <p class="core-features__subtitle mx-auto">{{ .Params.wall.intro_text }} <a class="link" target="_blank" href="{{ .Params.wall.url }}">{{ .Params.wall.url_text }}</a></p>
+      <p class="core-features__subtitle mx-auto">
+        {{ .Params.wall.intro_text }}
+        <a class="link" target="_blank" href="{{ .Params.wall.url }}">{{ .Params.wall.url_text }}</a>
+      </p>
     </div>
   </section>
 {{ end }}
